change name in package, but also to fix #1

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "feathers"
   ],
   "author": {
-    "name": "Manuel Urbano Santos",
+    "name": "Mu",
     "email": "mu@member.fsf.org"
   },
   "contributors": [],
