do not track package-lock in master
we will do later in release branches

--- a/.gitignore
+++ b/.gitignore
@@ -110,3 +110,8 @@ $RECYCLE.BIN/
 # Others
 lib/
 data/
+
+
+# ---- Own ----
+# I decided that I will only maintain the package lock in release branches
+package-lock.json
