--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "woddice",
   "description": "World of Diceness",
   "version": "0.0.0",
-  "homepage": "",
-  "private": true,
+  "homepage": "http://vampiro.asqueados.net",
+  "private": false,
   "main": "src",
   "keywords": [
     "feathers"
@@ -24,7 +24,9 @@
     "npm": ">= 3.0.0"
   },
   "scripts": {
-    "test": "npm run lint && npm run mocha",
+    "build": "npm install && npm run check"
+    "check": "npm run lint && npm run test",
+    "test": "npm run mocha",
     "lint": "eslint src/. test/. --config .eslintrc.json --fix",
     "dev": "nodemon src/",
     "start": "node src/",
@@ -37,7 +39,6 @@
     "ignore": []
   },
   "dependencies": {
-    "@feathersjs/cli": "github:feathersjs/cli",
     "@feathersjs/configuration": "^4.5.8",
     "@feathersjs/errors": "^4.5.8",
     "@feathersjs/express": "^4.5.8",
@@ -51,6 +52,7 @@
     "winston": "^3.3.3"
   },
   "devDependencies": {
+    "@feathersjs/cli": "github:feathersjs/cli",
     "axios": "^0.20.0",
     "eslint": "^7.9.0",
     "mocha": "^8.1.3",
