--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "@feathersjs/cli": "github:feathersjs/cli",
     "axios": "^0.20.0",
+    "chai": "^4.2.0",
     "eslint": "^7.9.0",
     "mocha": "^8.1.3",
     "nodemon": "^2.0.4"
