--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "chai": "^4.2.0",
     "eslint": "^7.9.0",
     "mocha": "^8.1.3",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "rewire": "^5.0.0"
   }
 }
