ignore all vscode

--- a/.gitignore
+++ b/.gitignore
@@ -38,10 +38,7 @@ node_modules
 *.sublime-workspace
 
 # IDE - VSCode
-.vscode/*
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
+.vscode
 
 ### Linux ###
 *~
