travis ci to run tests and eslint, fixes #30

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
-language: minimal
-
-script: /bin/true
+language: node_js
+node_js:
+  - "10"
+  - "12"
+  - "14"
+before_install:
+  - npm install
+script: npm run check
