--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   },
   "scripts": {
     "build": "npm install && npm run check",
+    "codecov": "npx nyc --reporter=lcov npm test && npx codecov",
+    "coverage": "nyc npm test",
     "check": "npm run lint && npm run test",
     "test": "npm run mocha",
     "lint": "eslint src/. test/. --config .eslintrc.json",
@@ -57,9 +59,11 @@
     "@feathersjs/cli": "github:feathersjs/cli",
     "axios": "^0.20.0",
     "chai": "^4.2.0",
+    "codecov": "^3.7.2",
     "eslint": "^7.9.0",
     "mocha": "^8.1.3",
     "nodemon": "^2.0.4",
+    "nyc": "^15.1.0",
     "rewire": "^5.0.0"
   }
 }
