--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "feathers-memory": "^4.1.0",
     "helmet": "^3.23.3",
     "serve-favicon": "^2.5.0",
-    "winston": "^3.3.3"
+    "winston": "^3.3.3",
+    "yaml": "^1.10.0"
   },
   "devDependencies": {
     "@feathersjs/cli": "github:feathersjs/cli",
